--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ buildscript {
             url "http://depot.sankuai.com/nexus/content/groups/public/"
         }
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.0'
@@ -31,6 +35,10 @@ allprojects {
             url "http://depot.sankuai.com/nexus/content/groups/public/"
         }
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     tasks.withType(JavaCompile) { options.encoding = "UTF-8" }
 }
