--- a/build.gradle
+++ b/build.gradle
@@ -2,26 +2,24 @@
 
 buildscript {
     repositories {
+        mavenCentral()
+        maven {//本地Maven仓库地址
+            url uri('/Users/ryanhuen/OtherProject/Robust/plugin_local')
+        }
         mavenLocal()
-        maven {
-            url "http://depot.sankuai.com/nexus/content/groups/public/"
-        }
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.meituan.robust:gradle-plugin:0.4.90'
-        classpath 'com.meituan.robust:auto-patch-plugin:0.4.90'
-        classpath 'me.tatarka:gradle-retrolambda:3.2.0'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+        classpath 'com.meituan.robust:gradle-plugin:0.4.92'
+        classpath 'com.meituan.robust:auto-patch-plugin:0.4.92'
+//        classpath 'me.tatarka:gradle-retrolambda:3.2.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-        classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
+//        classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
     }
     configurations.classpath.exclude group: 'com.android.tools.external.lombok'
 }
@@ -30,15 +28,10 @@ configurations.all {
 }
 allprojects {
     repositories {
+        mavenCentral()
         mavenLocal()
-        maven {
-            url "http://depot.sankuai.com/nexus/content/groups/public/"
-        }
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        google()
     }
     tasks.withType(JavaCompile) { options.encoding = "UTF-8" }
 }
